# chokan

./: .gitignore  Cargo.toml  Taskfile.yml  chokan-conversion.el  chokan-roman-table.el  chokan-symbol.el  chokan-tests.el  chokan-variable.el  chokan-websocket.el  chokan.el  flake.nix  readme.org
chokan-dic/: Cargo.toml
chokan-dic/dict/: huzoku.dic  standard.dic
chokan-dic/src/: lib.rs  main.rs
chokan-server/: Cargo.toml
chokan-server/src/: main.rs  method.rs  method_context.rs  session.rs  user_pref.rs
dic/: Cargo.toml
dic/dict/: huzoku.dic
dic/src/: types.rs
dic/src/base/: dictionary.rs  entry.rs  io.rs  mod.rs  speech.rs  support.rs  word.rs
dic/src/standard/: dic_grammer.rs  io.rs  mod.rs
libs/analytics-graph/: Cargo.toml
libs/dic/: Cargo.toml
libs/dic/src/: lib.rs
libs/dic/src/base/: dictionary.rs  entry.rs  speech.rs  word.rs
libs/dic/src/standard/: dic_grammer.rs  io.rs  mod.rs
libs/kana-alpha/: Cargo.toml
libs/kana-alpha/src/: conversion.rs  lib.rs
libs/kkc/: Cargo.toml
libs/kkc/src/: context.rs  frequency.rs  graph.rs  lib.rs  score.rs  tankan.rs  test_dic.rs
libs/trie/src/: lib.rs  nodes.rs  types.rs
skk-dic-parser/: Cargo.toml
skk-dic-parser/src/: lib.rs
skk-jinmei-converter/: Cargo.toml  make-jisyo.sh
skk-jinmei-converter/src/: jinmei_converter.rs  main.rs
skk-notes-converter/: Cargo.toml  make-jisyo.sh  make-patch.sh
skk-notes-converter/misc/: 001-remove-unique-grammar.patch  002-delete-line.patch  003-delete-invalid-mean.patch  004-fix-okuri.patch  005-delete-unknown.patch  006-delete-and-change-word.patch  007-change-speech.patch  008-change-speech.patch  009-change-speech.patch  010-delete-word.patch  011-fix-speech.patch  012-delete-unused.patch  013-change-form.patch  014-remove-unnecessary-mark.patch  015-remove-unused-form.patch  016-change-form.patch  018-fix-some-form.patch  019-delete-prefix.patch  020-fix-form.patch  021-add-particle.patch  022-fix-verb.patch  023-remove-invalid-word.patch  024-fix-verb.patch  025-fix-form.patch  026-fix-form.patch  027-fix-noun.patch  028-fix-verb.patch  029-remove-verb.patch  030-remove-with-particle.patch  031-fix-adjective.patch  032-fix-some-verb-and-noun.patch  033-fix-adjective-verb.patch  034-remove-makura-kotoba.patch  035-fix-verb.patch  036-fix-form.patch  037-remove-duplicate.patch  038-fix-verb.patch  039-fix-verb.patch  040-fix-verb.patch  041-fix-noun-and-verb.patch  (+18 more)
skk-notes-converter/src/: converter.rs  main.rs  note_grammer.rs
skk-noun-converter/: Cargo.toml  make-jisyo.sh
skk-noun-converter/src/: main.rs  noun_converter.rs
skk-tankan-converter/: Cargo.toml  make-jisyo.sh
skk-tankan-converter/src/: main.rs  s_dic_grammer.rs  tankan_grammer.rs
trie/src/: lib.rs  types.rs
