[package]
name = "chokan-dic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analytics-graph = { version = "0.1.0", path = "../libs/analytics-graph" }
dic = { version = "0.1.0", path = "../libs/dic" }
flexbuffers = "2.0.0"
serde = "1.0.197"
trie = { version = "0.1.0", path = "../libs/trie" }
