[package]
name = "chokan-dic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kkc = { version = "0.1.0", path = "../libs/kkc" }
dic = { version = "0.1.0", path = "../libs/dic" }
log = "0.4.21"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.197"
trie = { version = "0.1.0", path = "../libs/trie" }
env_logger = "0.11.3"
