[package]
name = "chokan-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chokan-dic = { version = "0.1.0", path = "../chokan-dic" }
chrono = "0.4.38"
clap = { version = "4.5.3", features = ["derive"] }
dic = { version = "0.1.0", path = "../libs/dic" }
jsonrpsee = { version = "0.24.2", features = ["server", "macros"] }
kana-alpha = { version = "0.1.0", path = "../libs/kana-alpha" }
kkc = { version = "0.1.0", path = "../libs/kkc" }
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
