[package]
name = "skk-tankan-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dic = { version = "0.1.0", path = "../libs/dic" }
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
peg = "0.8.2"
