[package]
name = "kkc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dic = { version = "0.1.0", path = "../dic" }
serde = { version = "1.0.197", features = ["derive"] }
trie = { version = "0.1.0", path = "../trie" }
